Fix extra spacing below icons
Inline elements have extra space below for descenders (see https://stackoverflow.com/a/7774854/1486679). This commit removes that space, which should make icon placement more predictable in general and in particular fixes the wobbly spinning icons on builds.sr.ht.

--- a/srht/scss/icons.scss
+++ b/srht/scss/icons.scss
@@ -1,6 +1,10 @@
 .icon {
   display: inline-block;
   line-height: .75em;
+
+  svg {
+    display: block;
+  }
   
   path {
     fill: currentColor;
